# haspell

./: .fuse_hidden000010a400000001  .gitignore  Haspell.hs  How to break Haspell.txt  HspInterpreter.hs  LICENSE  Phonemizer.hs  README.md  Soundgluer.hs  codeFormat_review.md  haspell.cabal  haspell.hs  phonemizer.hs  phoneticizer.hs  soundgluer.hs  stack.yaml
app/: Main.hs
doc/html/haspell/: HspInterpreter.html  Phonemizer.html  Soundgluer.html  doc-index.html  haspell.haddock  haspell.txt  index-frames.html  index.html  mini_HspInterpreter.html  mini_Phonemizer.html  mini_Soundgluer.html
doc/html/haspell/src/: HspInterpreter.html  Phonemizer.html  Soundgluer.html
lang/pol/: pol.hsp  pol_alias.hsp  pol_aliasrules.hsp  pol_phones.hsp
src/: Haspell.hs  HspInterpreter.hs  HspTypes.hs  Phonemizer.hs  Soundgluer.hs  Speaker.hs
test/: HunitTest.hs  QuickTest.hs  Spec.hs
vox/luknw/: pol.hsp
vox/std/: std.hsp
