name:                haspell
version:             0.1.0.0
synopsis:            Simple text-to-speech engine
description:         Please see README.md
homepage:            https://github.com/mprzewie/haspell#readme
license:             MIT
license-file:        LICENSE
author:              luknw, mprzewie
maintainer:          m.przewie@gmail.com
copyright:           2017 luknw, mprzewie
category:            Sound
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HspInterpreter
                     , Phonemizer
                     , Soundgluer
                     , Speaker
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , wave
                     , directory
                     , containers
                     , process
  default-language:    Haskell2010

executable haspell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haspell
                     , text
  default-language:    Haskell2010

test-suite haspell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haspell
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mprzewie/haspell
